<resources>
    <string name="app_name">Lab2_punto4</string>

    <string name="Titulo">Areas</string>
    <string name="action_settings">Settings</string>
    <string name="cuad">Cuadrado: </string>
    <string name="triang">Triangulo: </string>
    <string name="circ">Circulo: </string>
    <string name="rect">Rectangulo: </string>
    <string name="base1">Base</string>
    <string name="altura1">Altura</string>
    <string name="radio1">Radio</string>
    <string name="lado1">Lado</string>
    <string name="base">Base: </string>
    <string name="altura">Altura: </string>
    <string name="radio">Radio: </string>
    <string name="lado">Lado: </string>
    <string name="calc">Calcular</string>
    <string name="area">Area: </string>
    <string name="cero">0.00</string>
    <string name="cero1">0</string>
</resources>
